Fixed scrollbars covering text on some platforms

--- a/styling.css
+++ b/styling.css
@@ -1,5 +1,5 @@
 body {
-    max-width: 100ch;
+    max-width: 150ch;
     background: #fff; /* fallback */
     background: linear-gradient(90deg, rgba(255,255,255,1) 100ch,
         rgba(0,0,0,0) 100%), url("bg.jpg");
@@ -32,19 +32,14 @@ table th {
     padding-bottom: .5ex;
 }
 
-.linkbox, .mono {
-    font-family: mono;
-    font-size: 95%;
+td {
+    padding-top: 3px;
+    padding-bottom: 3px;
 }
 
-.linkbox {
-    background-color: #f2f2f2;
-    max-width: 30ch;
-    display: inline-block;
-    white-space: nowrap;
-    overflow: scroll;
-    text-overflow: ellipsis ellipsis;
-    height: 1.8em;
+.mono {
+    font-family: mono;
+    font-size: 95%;
 }
 
 #deptinfo { font-style: italic; }
